[package]
name = "hc_template"
version = "0.1.0"
authors = ["ReSpeak Team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
rayon = "1.3.0"
structopt = "0.3.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = { version = "3.0" }
bit-vec = { version = "0.6", features = ["serde"] }
